--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -8,4 +8,4 @@ $layout-slider-min-width: 64px;
 //主页面,底部导航栏高度
 $layout-tabbar-height: 60px;
 //主页面,底部导航栏颜色
-$layout-tabbar-color: #ddd;
+// $layout-tabbar-color: #ddd;
